--- a/Capstone Data Exploration.ipynb
+++ b/Capstone Data Exploration.ipynb
@@ -26,6 +26,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This script includes a function to query the database and return the list of table names,as well  a second function that accepts table name and number of rows as arguments and prints a summary of the head of each table."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -85,10 +92,6 @@
     }
    ],
    "source": [
-    "# This script includes a function to query the database and return the list of table names,\n",
-    "# as well  a second function that accepts table name and number of rows as arguments \n",
-    "# and prints a summary of the head of each table.\n",
-    "\n",
     "#Connect to rds\n",
     "try:\n",
     "    conn = psycopg2.connect(connection_string_js)\n",
@@ -307,11 +310,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 86400]\n",
+      "[2, 86401, 172800]\n",
+      "[3, 172801, 259200]\n",
+      "[4, 259201, 345600]\n",
+      "[5, 345601, 432000]\n",
+      "[6, 432001, 518400]\n",
+      "[7, 518401, 604800]\n",
+      "[8, 604801, 691200]\n",
+      "[9, 691201, 777600]\n",
+      "[10, 777601, 864000]\n",
+      "[11, 864001, 950400]\n",
+      "[12, 950401, 1036800]\n",
+      "[13, 1036801, 1123200]\n",
+      "[14, 1123201, 1209600]\n",
+      "[15, 1209601, 1296000]\n",
+      "[16, 1296001, 1382400]\n",
+      "[17, 1382401, 1468800]\n",
+      "[18, 1468801, 1555200]\n",
+      "[19, 1555201, 1641600]\n",
+      "[20, 1641601, 1728000]\n",
+      "[21, 1728001, 1814400]\n",
+      "[22, 1814401, 1900800]\n",
+      "[23, 1900801, 1987200]\n",
+      "[24, 1987201, 2073600]\n",
+      "[25, 2073601, 2160000]\n",
+      "[26, 2160001, 2246400]\n",
+      "[27, 2246401, 2332800]\n",
+      "[28, 2332801, 2419200]\n",
+      "[29, 2419201, 2505600]\n",
+      "[30, 2505601, 2592000]\n",
+      "[31, 2592001, 2678400]\n",
+      "[32, 2678401, 2764800]\n",
+      "[33, 2764801, 2851200]\n",
+      "[34, 2851201, 2937600]\n",
+      "[35, 2937601, 3024000]\n",
+      "[36, 3024001, 3110400]\n",
+      "[37, 3110401, 3196800]\n",
+      "[38, 3196801, 3283200]\n",
+      "[39, 3283201, 3369600]\n",
+      "[40, 3369601, 3456000]\n",
+      "[41, 3456001, 3542400]\n",
+      "[42, 3542401, 3628800]\n",
+      "[43, 3628801, 3715200]\n",
+      "[44, 3715201, 3801600]\n",
+      "[45, 3801601, 3888000]\n",
+      "[46, 3888001, 3974400]\n",
+      "[47, 3974401, 4060800]\n",
+      "[48, 4060801, 4147200]\n",
+      "[49, 4147201, 4233600]\n",
+      "[50, 4233601, 4320000]\n",
+      "[51, 4320001, 4406400]\n",
+      "[52, 4406401, 4492800]\n",
+      "[53, 4492801, 4579200]\n",
+      "[54, 4579201, 4665600]\n",
+      "[55, 4665601, 4752000]\n",
+      "[56, 4752001, 4838400]\n",
+      "[57, 4838401, 4924800]\n",
+      "[58, 4924801, 5011200]\n",
+      "[59, 5011201, 5097600]\n",
+      "[60, 5097601, 5184000]\n"
+     ]
+    }
+   ],
    "source": [
     "day_number = []\n",
     "start_time = 1\n",
@@ -322,8 +392,8 @@
     "    day_number.append(i)\n",
     "    start_time = end_time + 1\n",
     "    day_label = day_label + 1\n",
-    "#for i in day_number:\n",
-    "#    print (i)"
+    "for i in day_number:\n",
+    "    print (i)"
    ]
   },
   {
@@ -623,10 +693,7 @@
     "        y = [day_number[x][0],hour_label,start_time,end_time]\n",
     "        day_hour_number.append(y)\n",
     "        start_time = end_time + 1\n",
-    "        hour_label = hour_label + 1\n",
-    "\n",
-    "#for i in day_hour_number:\n",
-    "#    print (i)"
+    "        hour_label = hour_label + 1"
    ]
   },
   {
@@ -644,16 +711,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[22, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 19, 19, 19, 19, 19, 19, 19, 19, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 23, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 9, 21, 21, 21, 21, 21, 21, 21, 21, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 22, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 23, 24, 24, 24, 24, 24, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 9, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 18, 9, 9, 9, 9, 9, 10, 11, 11, 11, 11, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 9, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 9, 9, 9, 9, 9, 10, 10, 10, 12, 12, 12, 15, 15, 15, 16, 16, 17, 17, 17, 19, 19, 9, 10, 11, 12, 12, 12, 12, 13, 13, 13, 9, 9, 10, 16, 11, 9, 14, 14, 14, 15, 15, 15, 16, 16, 16, 16, 16, 16, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 9, 10, 18, 18, 19, 19, 19, 20, 20, 20, 20, 20, 11, 11, 11, 13, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 18, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 12, 12, 12, 12, 16, 16, 16, 17, 17, 17, 17, 17, 17, 17, 18, 18, 18, 18, 18, 19, 19, 19, 19, 19, 19, 9, 10, 10, 10, 8, 8, 9, 13, 10, 11, 11, 11, 12, 12, 15, 12, 12, 14, 9, 13, 13, 13, 13, 13, 14, 14, 14, 14, 14, 14, 14, 14, 14, 15]\n"
+     "ename": "NameError",
+     "evalue": "name 'hour_updater' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-631f298af4ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m749\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1440\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhour_updater\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mday_hour_number\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhour_updater\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mday_hour_number\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mhour_series\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mday_hour_number\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#print (hour_series)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hour_updater' is not defined"
      ]
     }
    ],
@@ -663,8 +734,7 @@
     "for x in range(749):\n",
     "    for y in range(1440):\n",
     "        if int(hour_updater[x][2]) >= day_hour_number[y][2] and int(hour_updater[x][2]) < day_hour_number[y][3]:\n",
-    "            hour_series.append(day_hour_number[y][1])\n",
-    "print (hour_series)"
+    "            hour_series.append(day_hour_number[y][1])"
    ]
   },
   {
@@ -835,16 +905,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[922.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 913.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 914.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 915.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 916.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 917.0, 918.0, 918.0, 918.0, 918.0, 918.0, 918.0, 918.0, 918.0, 918.0, 918.0, 919.0, 919.0, 919.0, 919.0, 919.0, 919.0, 919.0, 919.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 920.0, 923.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 139.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 921.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 922.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 923.0, 924.0, 924.0, 924.0, 924.0, 924.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 1015.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 139.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1310.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1311.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1312.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1313.0, 1314.0, 1314.0, 1314.0, 1314.0, 1314.0, 1314.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1315.0, 1316.0, 1316.0, 1316.0, 1316.0, 1316.0, 1316.0, 1316.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1317.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 1318.0, 149.0, 149.0, 149.0, 149.0, 149.0, 1410.0, 1411.0, 1411.0, 1411.0, 1411.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1412.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1413.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1414.0, 1415.0, 1415.0, 1415.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1416.0, 1417.0, 1417.0, 1417.0, 1417.0, 1417.0, 1417.0, 1417.0, 1417.0, 1417.0, 1418.0, 1418.0, 1418.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 157.0, 159.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1510.0, 1511.0, 1511.0, 1511.0, 69.0, 69.0, 69.0, 69.0, 69.0, 610.0, 610.0, 610.0, 612.0, 612.0, 612.0, 615.0, 615.0, 615.0, 616.0, 616.0, 617.0, 617.0, 717.0, 719.0, 719.0, 89.0, 910.0, 1511.0, 1512.0, 1512.0, 1512.0, 1512.0, 1513.0, 1513.0, 1513.0, 169.0, 169.0, 1610.0, 1616.0, 1611.0, 229.0, 2314.0, 2714.0, 2714.0, 2715.0, 2715.0, 2715.0, 2716.0, 2716.0, 2716.0, 2716.0, 2716.0, 2716.0, 2716.0, 2716.0, 2716.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 2717.0, 279.0, 2810.0, 2818.0, 218.0, 219.0, 219.0, 219.0, 220.0, 220.0, 220.0, 220.0, 220.0, 211.0, 311.0, 311.0, 313.0, 316.0, 316.0, 316.0, 316.0, 316.0, 316.0, 316.0, 316.0, 316.0, 316.0, 318.0, 310.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 910.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 911.0, 912.0, 912.0, 912.0, 912.0, 1416.0, 1616.0, 1616.0, 1617.0, 1617.0, 1617.0, 1617.0, 1617.0, 1617.0, 1617.0, 1618.0, 1618.0, 1618.0, 1618.0, 1618.0, 1619.0, 1619.0, 1619.0, 1619.0, 1619.0, 1619.0, 169.0, 2110.0, 2210.0, 2210.0, 228.0, 68.0, 69.0, 613.0, 1410.0, 2811.0, 2811.0, 2811.0, 2812.0, 2812.0, 2815.0, 2812.0, 2912.0, 2914.0, 299.0, 3013.0, 3013.0, 3013.0, 3013.0, 3013.0, 3014.0, 3014.0, 3014.0, 3014.0, 3014.0, 3014.0, 3014.0, 3014.0, 3014.0, 3015.0]\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-2ec77cdbc2f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mhour_encoded\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m748\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mconcatenator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'day'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'hour_cyclical'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mfloaterator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconcatenator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mhour_encoded\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloaterator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -853,10 +927,7 @@
     "for x in range(748):\n",
     "    concatenator = str(df['day'][x]) + str(df['hour_cyclical'][x])\n",
     "    floaterator = float(concatenator)\n",
-    "    hour_encoded.append(floaterator)\n",
-    "    \n",
-    "    \n",
-    "print (hour_encoded)"
+    "    hour_encoded.append(floaterator)"
    ]
   },
   {
@@ -6133,17 +6204,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#df_auth.head() #for some reason df_auth.shape() keeps throwing an error, .head() method give the shape though"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6631,7 +6691,7 @@
     "import json \n",
     "\n",
     "meta = {\n",
-    "    'target_names': list(df.redteam.unique()),\n",
+    "    'target_names': list(df.auth.unique()),\n",
     "    'feature_names': list(df.columns),\n",
     "    'categorical_features': {\n",
     "        column: list(df[column].unique())\n",
